Removes the references to shared workers from the all documents in being deleted frames.

So that we can shut down any shared workers that are no longer referenced by active documents without waiting for DocumentDetached IPC message.

This will fix the race condition reported in https://crbug.com/636377#c11

BUG=639193
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2249173003
Cr-Commit-Position: refs/heads/master@{#414427}

Former-commit-id: 798a8b94726d3c439e6302998f31bc487f521ec8